<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="com.example.itemlistapp.model.Item" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".ItemCreation">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:gravity="center"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/back_icon"
                app:title="@string/item_creation" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="200dp"
            android:layout_height="191dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/item_content_description"
            android:paddingBottom="20dp"
            android:src="@drawable/default_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_marginEnd="10dp"
                android:gravity="end|center"
                android:text="@string/item_name" />

            <EditText
                android:id="@+id/item_name_et"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:autofillHints="Item Name"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/item_name_hint"
                android:text="@={item.itemName}" />
        </LinearLayout>

        <TextView
            android:id="@+id/name_errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end|center"
            android:visibility="gone"
            android:text="@string/name_cannot_be_empty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sku_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_marginEnd="10dp"
                android:gravity="end|center"
                android:text="@string/sku_number" />


            <EditText
                android:id="@+id/sku_number_et"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:autofillHints="sku number"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/sku_number_hint"
                android:text="@={`` + item.skuNumber}"/>

        </LinearLayout>
        <TextView
            android:id="@+id/sku_errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end|center"
            android:visibility="gone"
            android:text="@string/enter_only_number" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            tools:ignore="ExtraText">

            <TextView
                android:id="@+id/stock"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_marginEnd="10dp"
                android:gravity="end|center"
                android:text="@string/stock_in_quantity" />


            <EditText
                android:id="@+id/stock_in_quantity_et"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:autofillHints="stock Quantity"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/stock_in_quantity_hint"
                android:text="@={`` + item.stockQuantity}"/>
            <ImageButton
                android:id="@+id/edit_quantity_icon"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/editbutton"
                android:src="@drawable/edit_icon">

            </ImageButton>

        </LinearLayout>
        <TextView
            android:id="@+id/stock_errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end|center"
            android:visibility="gone"
            android:text="@string/enter_only_number" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:gravity="end|center"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_marginEnd="10dp"
                android:text="@string/description" />

            <EditText
                android:id="@+id/description_et"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:autofillHints="Description"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/discription_of_item"
                android:text="@={item.description}" />
        </LinearLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            android:textSize="25sp" />

    </LinearLayout>
</layout>
