<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="item"
            type="com.example.itemlistapp.model.Item" />
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/white">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="200dp"
            android:layout_height="191dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/item_content_description"
            android:paddingBottom="20dp"
            android:src="@drawable/default_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_marginEnd="10dp"
                android:gravity="end|center"
                android:text="@string/item_name" />

            <TextView
                android:id="@+id/itemName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_marginEnd="10dp"
                android:text="@{item.itemName}" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_marginEnd="10dp"
                android:gravity="end|center"
                android:text="@string/sku_number" />

            <TextView
                android:id="@+id/skuNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_marginEnd="10dp"
                android:text="@{String.valueOf(item.skuNumber)}" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_marginEnd="10dp"
                android:gravity="end|center"
                android:text="@string/stock_in_quantity" />

            <TextView
                android:id="@+id/stock_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_marginEnd="10dp"
                android:visibility="visible"
                android:text="@{`` + item.stockQuantity}" />
            <EditText
                android:id="@+id/stock_quantity_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:visibility="gone"
                android:layout_marginEnd="10dp"
                android:autofillHints="Stock Quantity"
                android:inputType="number"
                android:text="@={`` + item.stockQuantity}"/>
            <ImageButton
                android:id="@+id/edit_quantity_icon"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:contentDescription="@string/editbutton"
                android:src="@drawable/edit_icon"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_marginEnd="10dp"
                android:gravity="end|center"
                android:text="@string/description" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:layout_marginEnd="10dp"
                android:text="@{item.description}"/>
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>